--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
   <header>
-    <h1>🎮 OsmoDev</h1>
+    <h1>🎮ThatGamedevOsman</h1>
     <p>Indie Game Developer | Retro Arcade Vibes</p>
   </header>
 
@@ -141,7 +141,7 @@
   </section>
 
   <footer>
-    <p>© 2025 OsmoDev | <a href="https://osmodev.itch.io/">View all games on Itch.io</a></p>
+    <p>© 2025 ThatGamedevOsman | <a href="https://osmodev.itch.io/">View all games on Itch.io</a></p>
   </footer>
 
 </body>
