--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OsmoDev | Game Portfolio</title>
+
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
     body {
       margin: 0;
       font-family: 'Press Start 2P', monospace;
@@ -13,8 +16,6 @@
       text-align: center;
       padding-bottom: 50px;
     }
-
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
     header {
       background: linear-gradient(135deg, #4a00e0, #8e2de2);
@@ -35,6 +36,36 @@
       margin-top: 10px;
     }
 
+    /* --- HERO SECTION --- */
+    .hero {
+      background: linear-gradient(to bottom right, #120458, #2e0359);
+      color: #f8f8f2;
+      padding: 80px 20px;
+      border-bottom: 2px solid #8e2de2;
+      box-shadow: 0 0 20px rgba(142, 45, 226, 0.6);
+    }
+
+    .hero h2 {
+      font-size: 1.2rem;
+      color: #ff79c6;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 0.7rem;
+      max-width: 700px;
+      margin: 0 auto;
+      line-height: 1.8;
+      color: #d6d6d6;
+    }
+
+    .about-me {
+      margin-top: 25px;
+      font-size: 0.65rem;
+      color: #ccc;
+    }
+
+    /* --- GAMES GRID --- */
     .games {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -68,6 +99,12 @@
       font-size: 0.9rem;
       color: #ff79c6;
       margin: 0 0 10px 0;
+    }
+
+    .game p {
+      font-size: 0.6rem;
+      color: #ccc;
+      margin-bottom: 10px;
     }
 
     .game a {
@@ -104,44 +141,58 @@
 <body>
 
   <header>
-    <h1>🎮ThatGamedevOsman</h1>
-    <p>Indie Game Developer | Retro Arcade Vibes</p>
+    <h1>🎮 ThatGamedevOsman</h1>
+    <p>Indie Game Developer or something else??</p>
   </header>
+
+  <section class="hero">
+    <h2>Welcome to My Game Portfolio</h2>
+    <p>Explore my collection of indie projects built in Unity — from action platformers to relaxing puzzle games.</p>
+    <div class="about-me">
+      <p>Hi, I’m <strong>Osman</strong> — an indie game developer passionate about creating worlds that feel alive.  
+      I try to specialize in Unity and love experimenting with unique mechanics, tight controls, and satisfying feedback loops.</p>
+    </div>
+  </section>
 
   <section class="games">
     <div class="game">
-      <img src="img/hero-vanished.png" alt="A Hero Vanished in Shadows">
+      <img src="img/hero-vanished.jpg" alt="A Hero Vanished in Shadows">
       <h3>A Hero Vanished in Shadows</h3>
+      <p>A roguelike 2D platformer where you battle through darkness, collecting power-ups and facing hidden dangers.</p>
       <a href="https://osmodev.itch.io/a-hero-vanished-in-shadows" target="_blank">Play on Itch.io</a>
     </div>
 
     <div class="game">
-      <img src="img/2d-tower-defense.png" alt="2D Tower Defense">
+      <img src="img/2d-tower-defense.jpg" alt="2D Tower Defense">
       <h3>2D Tower Defense</h3>
+      <p>Defend your base across 25 handcrafted levels with towers, heroes, and enemies that evolve over time.</p>
       <a href="https://osmodev.itch.io/2d-tower-defense" target="_blank">Play on Itch.io</a>
     </div>
 
     <div class="game">
-      <img src="img/supah-boi.png" alt="Supah Boi Runner">
+      <img src="img/supah-boi.jpg" alt="Supah Boi Runner">
       <h3>Supah Boi Runner</h3>
+      <p>A 3D platformer where you jump, float, and dodge traps to collect coins and survive moving platforms.</p>
       <a href="https://osmodev.itch.io/supah-boi-runner" target="_blank">Play on Itch.io</a>
     </div>
 
     <div class="game">
-      <img src="img/color-balls.png" alt="Color Balls">
+      <img src="img/color-balls.jpg" alt="Color Balls">
       <h3>Color Balls</h3>
+      <p>Sort and align colorful balls to match the pattern — a satisfying puzzle game with relaxing vibes.</p>
       <a href="https://osmodev.itch.io/color-balls" target="_blank">Play on Itch.io</a>
     </div>
 
     <div class="game">
-      <img src="img/bathtime-word-bubbles.png" alt="Bathtime Word Bubbles">
+      <img src="img/bathtime-word-bubbles.jpg" alt="Bathtime Word Bubbles">
       <h3>Bathtime Word Bubbles</h3>
+      <p>Guess words from pictures and pop bubbles in this cute, casual puzzle game perfect for short sessions.</p>
       <a href="https://osmodev.itch.io/bathtime-word-bubbles" target="_blank">Play on Itch.io</a>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 ThatGamedevOsman | <a href="https://osmodev.itch.io/">View all games on Itch.io</a></p>
+    <p>© 2025 ThatGamedevOsman | <a href="https://osmodev.itch.io/" target="_blank">View all games on Itch.io</a></p>
   </footer>
 
 </body>
