Fix HTML encoding and update game entry

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- 🎢 NEW GAME ENTRY -->
   <div class="game">
-    <img src="img/roller-coaster-theme-park.jpg" alt="Roller Coaster Theme Park">
+    <img src="img/roller-coaster-theme-park.png" alt="Roller Coaster Theme Park">
     <h3>Roller Coaster Theme Park</h3>
     <p>Build and ride thrilling roller coasters! Unlock new tracks, cars, and rides in a dynamic 3D amusement park with integrated ad rewards.</p>
     <a href="https://osmodev.itch.io/roller-coaster-theme-park" target="_blank">Play on Itch.io</a>
