Update game portfolio with new projects

--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
   <section class="games">
 
     <div class="game">
+      <img src="img/void-timeless.jpg" alt="VOID: Timeless">
+      <h3>VOID: Timeless</h3>
+      <p>A fast-paced sci-fi action game built around time manipulation. Create echoes of your past self,dash through space, slow time, and survive endless waves of cosmic enemies using pure skill and precision.  </p>
+  <a href="https://osmodev.itch.io/void-timeless" target="_blank">Play on Itch.io</a>
+</div>
+
+    <div class="game">
       <img src="img/2d-tower-defense.jpg" alt="2D Tower Defense">
       <h3>2D Tower Defense</h3>
       <p>Defend your base across 25 handcrafted levels with towers, heroes, and enemies that evolve over time.</p>
@@ -234,5 +241,6 @@
 
 </body>
 </html>
+
 
 
