--- a/index.html
+++ b/index.html
@@ -270,7 +270,17 @@
       <span class="section-title">&#127937; COMPLETED GAMES</span>
       <div class="section-line"></div>
     </div>
+    
     <div class="games-grid">
+       <div class="game-card">
+        <div class="card-img-wrap"><img src="img/mid-town-city-racers.jpg" alt="VOID: Timeless"><div class="card-overlay"></div><span class="card-badge badge-done">RELEASED</span></div>
+        <div class="card-body">
+          <h3 class="card-title">MIDTOWN CITY RACERS</h3>
+          <p class="card-desc"> A high-speed arcade racing experience set in a vibrant city. Drift through traffic, unlock new cars, and dominate the streets.</p>
+          <div class="card-footer"><div class="card-tags"><span class="tag">SCI-FI</span><span class="tag">ACTION</span><span class="tag">TIME</span></div><a href="https://osmodev.itch.io/void-timeless" target="_blank" class="play-btn">&#9654; PLAY</a></div>
+        </div>
+      </div>
+      
       <div class="game-card">
         <div class="card-img-wrap"><img src="img/void-timeless.jpg" alt="VOID: Timeless"><div class="card-overlay"></div><span class="card-badge badge-done">RELEASED</span></div>
         <div class="card-body">
@@ -524,3 +534,4 @@
   </script>
 </body>
 </html>
+
