--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <div class="card-body">
           <h3 class="card-title">MIDTOWN CITY RACERS</h3>
           <p class="card-desc"> A high-speed arcade racing experience set in a vibrant city. Drift through traffic, unlock new cars, and dominate the streets.</p>
-          <div class="card-footer"><div class="card-tags"><span class="tag">SCI-FI</span><span class="tag">ACTION</span><span class="tag">TIME</span></div><a href="https://osmodev.itch.io/void-timeless" target="_blank" class="play-btn">&#9654; PLAY</a></div>
+          <div class="card-footer"><div class="card-tags"><span class="tag">RACING</span><span class="tag">ACTION</span><span class="tag">TIME</span></div><a href="https://osmodev.itch.io/midtown-city-racers" target="_blank" class="play-btn">&#9654; PLAY</a></div>
         </div>
       </div>
       
@@ -534,5 +534,6 @@
   </script>
 </body>
 </html>
+
 
 
