Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
     
     <div class="games-grid">
        <div class="game-card">
-        <div class="card-img-wrap"><img src="img/mid-town-city-racers.jpg" alt="VOID: Timeless"><div class="card-overlay"></div><span class="card-badge badge-done">RELEASED</span></div>
+        <div class="card-img-wrap"><img src="img/mid-town-city-racers.jpg" alt="Midtown City Racers"><div class="card-overlay"></div><span class="card-badge badge-done">RELEASED</span></div>
         <div class="card-body">
           <h3 class="card-title">MIDTOWN CITY RACERS</h3>
           <p class="card-desc"> A high-speed arcade racing experience set in a vibrant city. Drift through traffic, unlock new cars, and dominate the streets.</p>
-          <div class="card-footer"><div class="card-tags"><span class="tag">RACING</span><span class="tag">ACTION</span><span class="tag">TIME</span></div><a href="https://osmodev.itch.io/midtown-city-racers" target="_blank" class="play-btn">&#9654; PLAY</a></div>
+          <div class="card-footer"><div class="card-tags"><span class="tag">RACING</span><span class="tag">ACTION</span><span class="tag">MOBILE</span></div><a href="https://osmodev.itch.io/midtown-city-racers" target="_blank" class="play-btn">&#9654; PLAY</a></div>
         </div>
       </div>
       
@@ -534,6 +534,7 @@
   </script>
 </body>
 </html>
+
 
 
 
